agregar y aplicar estilos al sitio

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset='utf-8'>
     <title>Wiki Animal</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="/css/styles.css"/>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="/" title=" ir a la pagina principal">
+    <header class="main-header">
+        <nav class="navigation-bar">
+            <a class="brand-link" href="/" title=" ir a la pagina principal">
                 <img src="https://static.nationalgeographicla.com/files/styles/image_3200/public/nationalgeographic_2810728.webp?w=1600&h=900"
                     width="80" height="80" alt="logo de Wiki Animal" />
                 <span> Wiki Animal</span>
@@ -18,28 +22,41 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="info-section">
             <h1>Wiki Animal</h1>
             <p>
                 En esta Wiki encontrarás información sobre animales.
             </p>
         </section>
-        <section>
+        <section class="info-section">
             <h2>Categorías</h2>
             <p>
                 Encuentra aqui información de animales categorizada.
             </p>
-            <div>
-                <figure>
+            <div class="cards-container">
+                <figure class="category-card">
                     <img src="https://previews.123rf.com/images/iimages/iimages2003/iimages200300141/141470357-gran-conjunto-de-vida-silvestre-con-muchos-tipos-de-ilustraci%C3%B3n-de-animales-terrestres-y-acu%C3%A1ticos.jpg"
                         width="200" height="200" alt="ir a la categoria de animales terrestres">
                     <figcaption>
                         <a href="/categorias/animales-terrestres.html" title="ir a la categoría animales terrestres">
-                            animales terrestres
+                        animales terrestres
                         </a>
                     </figcaption>
                 </figure>
-            </div>
+                <figure class="category-card">
+                    <img src="https://static.vecteezy.com/system/resources/previews/000/418/910/non_2x/vector-differrent-kinds-of-land-animals.jpg"
+                        width="200" height="200" alt="ir a la categoria de animales terrestres">
+                    <figcaption>
+                        <a href="/categorias/animales-terrestres.html" title="ir a la categoría animales terrestres">
+                        animales terrestres
+                        </a>
+                    </figcaption>
+                </figure>
+                    <figcaption>
+                      </a>
+                    </figcaption>
+                </figure>
+                   </div>
         </section>
     </main>
 </body>
