--- a/categorias/animales-terrestres.html
+++ b/categorias/animales-terrestres.html
@@ -3,14 +3,18 @@
 
 <head>
     <meta charset='utf-8'>
-    <title>animales terrestres</title>
+    <title> wiki animales terrestres</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css"/>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="/" title=" ir a la pagina principal">
+    <header class="main-header">
+        <nav class="navigation-bar">
+            <a class="brand-link" href="/" title=" ir a la pagina principal">
                 <img src="https://static.nationalgeographicla.com/files/styles/image_3200/public/nationalgeographic_2810728.webp?w=1600&h=900"
                     width="80" height="80" alt="logo de Wiki Animal" />
                 <span> Wiki Animal</span>
@@ -18,13 +22,12 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="info-section">
             <h1>animales terrestres</h1>
             <p>
                 En esta Wiki encontrarás información sobre animales terrestres.
             </p>
-        </section>
-       
+        </section>       
     </main>
 </body>
 
