agregar estilos y deseño en la página

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </p>
             <div class="cards-container">
                 <figure class="category-card">
-                    <img src="https://previews.123rf.com/images/iimages/iimages2003/iimages200300141/141470357-gran-conjunto-de-vida-silvestre-con-muchos-tipos-de-ilustraci%C3%B3n-de-animales-terrestres-y-acu%C3%A1ticos.jpg"
+                    <img src="https://png.pngtree.com/png-clipart/20230803/original/pngtree-different-kinds-of-land-animals-freindly-predator-clip-art-vector-picture-image_9467092.png"
                         width="200" height="200" alt="ir a la categoria de animales terrestres">
                     <figcaption>
                         <a href="/categorias/animales-terrestres.html" title="ir a la categoría animales terrestres">
@@ -44,11 +44,11 @@
                     </figcaption>
                 </figure>
                 <figure class="category-card">
-                    <img src="https://static.vecteezy.com/system/resources/previews/000/418/910/non_2x/vector-differrent-kinds-of-land-animals.jpg"
+                    <img src="https://img.freepik.com/vector-premium/dibujos-animados-animales-marinos-aislados-blanco_229548-1387.jpg?w=996"
                         width="200" height="200" alt="ir a la categoria de animales terrestres">
                     <figcaption>
-                        <a href="/categorias/animales-terrestres.html" title="ir a la categoría animales terrestres">
-                        animales terrestres
+                        <a href="/categorias/animales-acuaticos.html" title="ir a la categoría animales acuaticos">
+                        animales acuáticos
                         </a>
                     </figcaption>
                 </figure>
